<resources>
    <string name="app_name">HW07</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="start_new_journey">Start New Journey</string>
    <string name="view_past_journeys">View Past Journeys</string>
</resources>