<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment" >

    <EditText
        android:id="@+id/editTextNewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNewEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextNewName"
        app:layout_constraintStart_toStartOf="@+id/editTextNewName"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewName" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextNewEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextNewEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewEmail" />

    <Button
        android:id="@+id/buttonCreateNewAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_new_account"
        app:layout_constraintEnd_toEndOf="@+id/editTextNewPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword" />

    <TextView
        android:id="@+id/textViewCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/buttonCreateNewAccount"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateNewAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>